TEPHRA-73 Add a metrics collector implementation that does reporting via JMX and logging